Update index.html for language and structure

--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 
 
   <div class="home">
-  <a href="ユーザ/user.html?userId=1" class="user">
+  <a href="user.html?userId=1" class="user">
     <div class="user-icon"></div>
     <div class="user-info">
       <div class="user-name">ろつ</div>
     </div>
   </a>
 
-  <a href="ユーザ/user.html?userId=2" class="user">
+  <a href="user.html?userId=2" class="user">
     <div class="user-icon"></div>
     <div class="user-info">
       <div class="user-name">おかき</div>
     </div>
   </a>
 
-  <a href="ユーザ/user.html?userId=3" class="user">
+  <a href="user.html?userId=3" class="user">
     <div class="user-icon"></div>
     <div class="user-info">
       <div class="user-name">なす</div>
     </div>
   </a>
 
-  <a href="ユーザ/user.html?userId=4" class="user">
+  <a href="user.html?userId=4" class="user">
     <div class="user-icon"></div>
     <div class="user-info">
       <div class="user-name">しらい</div>
     </div>
   </a>
 
-  <a href="ユーザ/user.html?userId=5" class="user">
+  <a href="user.html?userId=5" class="user">
     <div class="user-icon"></div>
     <div class="user-info">
       <div class="user-name">ちょこ</div>
@@ -76,27 +76,27 @@
   <main>
     <div class="home">
 
-      <a href="ユーザ/user.html?userId=1" class="user">
+      <a href="user.html?userId=1" class="user">
         <div class="user-icon"></div>
         <div class="user-name">ろつ</div>
       </a>
 
-      <a href="ユーザ/user.html?userId=2" class="user">
+      <a href="user.html?userId=2" class="user">
         <div class="user-icon"></div>
         <div class="user-name">おかき</div>
       </a>
 
-      <a href="ユーザ/user.html?userId=3" class="user">
+      <a href="user.html?userId=3" class="user">
         <div class="user-icon"></div>
         <div class="user-name">なす</div>
       </a>
 
-      <a href="ユーザ/user.html?userId=4" class="user">
+      <a href="user.html?userId=4" class="user">
         <div class="user-icon"></div>
         <div class="user-name">しらい</div>
       </a>
 
-      <a href="ユーザ/user.html?userId=5" class="user">
+      <a href="user.html?userId=5" class="user">
         <div class="user-icon"></div>
         <div class="user-name">ちょこ</div>
       </a>
@@ -106,3 +106,4 @@
 
 </body>
 </html>
+
