--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>斬首アプリ</title>
-  <link rel="stylesheet" href="css/zansyu.css" />
+  <link rel="stylesheet" href="zansyu.css" />
 </head>
 <body>
 
@@ -106,4 +106,5 @@
 
 </body>
 </html>
+
 
