Fix HTML encoding issues in user.html

--- a/user.html
+++ b/user.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ユーザ画面</title>
-  <link rel="stylesheet" href="usercss/user.css" />
+  <link rel="stylesheet" href="user.css" />
 </head>
 <body>
 
@@ -50,11 +50,11 @@
       ],
 
       5: [
-        { id: 505, name: "蛇目さいか", img: "ちょこ/OCimg/アマネ.jpg"},
-        { id: 504, name: "愛徳れみ", img: "ちょこ/OCimg/アマネ.jpg"},
-        { id: 503, name: "御城美夜子", img: "ちょこ/OCimg/アマネ.jpg"},
-        { id: 502, name: "ひより", img: "ちょこ/OCimg/アマネ.jpg"},
-        { id: 501, name: "島枝勇儀", img: "ちょこ/OCimg/アマネ.jpg"}
+        { id: 505, name: "蛇目さいか", img: "img/oc5/アマネ.jpg"},
+        { id: 504, name: "愛徳れみ", img: "img/oc5/アマネ.jpg"},
+        { id: 503, name: "御城美夜子", img: "img/oc5/アマネ.jpg"},
+        { id: 502, name: "ひより", img: "img/oc5/アマネ.jpg"},
+        { id: 501, name: "島枝勇儀", img: "img/oc5/アマネ.jpg"}
       ]
     };
 
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
