--- a/user.html
+++ b/user.html
@@ -25,7 +25,7 @@
        ユーザID取得
     ===================== */
     const params = new URLSearchParams(location.search);
-    const userId = params.get("userId");
+    const userId = Number(params.get("userId"));
 
     /* =====================
        仮データ
@@ -98,4 +98,5 @@
 
 </body>
 </html>
+
 
