--- a/user.html
+++ b/user.html
@@ -50,11 +50,11 @@
       ],
 
       5: [
-        { id: 505, name: "蛇目さいか", img: "img/oc5/アマネ.jpg"},
-        { id: 504, name: "愛徳れみ", img: "img/oc5/アマネ.jpg"},
-        { id: 503, name: "御城美夜子", img: "img/oc5/アマネ.jpg"},
-        { id: 502, name: "ひより", img: "img/oc5/アマネ.jpg"},
-        { id: 501, name: "島枝勇儀", img: "img/oc5/アマネ.jpg"}
+        { id: 505, name: "蛇目さいか", img: "img/oc5/amane.jpg"},
+        { id: 504, name: "愛徳れみ", img: "img/oc5/amane.jpg"},
+        { id: 503, name: "御城美夜子", img: "img/oc5/amane.jpg"},
+        { id: 502, name: "ひより", img: "img/oc5/amane.jpg"},
+        { id: 501, name: "島枝勇儀", img: "img/oc5/amane.jpg"}
       ]
     };
 
@@ -98,5 +98,6 @@
 
 </body>
 </html>
+
 
 
